@@ -1,3 +1,8 @@
+2007-05-11  Sven Neumann  <sven@gimp.org>
+
+	* app/main.c (gimp_dbus_open): convert filenames to absolute file
+	URIs before passing them to dbus_g_proxy_call().
+
 2007-05-10  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/imagemap/imap_main.[ch]
